# rt-complexity-lens

./: .gitignore  BUG_INVESTIGATION_GUIDE.md  CROSS_VALIDATION_FINDINGS.md  DOCUMENTATION_ANALYSIS.md  ENHANCEMENT_PLAN.md  LICENSE  METRIC_RELIABILITY_GUIDE.md  MONACO_SUPPORT.md  PAM_COMPLETION_REPORT.md  PAM_IMPLEMENTATION_SUMMARY.md  PAM_QUICKSTART.md  README.md  STATUS_DASHBOARD.md  UPDATE_SUMMARY.md  index.html  package-lock.json  package.json
.lovable/: plan.md
docs/: ALGORITHMS.md
public/test-data/: RP.TG119.CS_ETH_2A_#1.dcm  RP.TG119.CS_ETH_9F.dcm  RP.TG119.CS_TB_2A_#1.dcm  RP.TG119.HN_ETH_2A_#1.dcm  RP.TG119.HN_ETH_7F.dcm  RP.TG119.HN_TB_7F.dcm  RP.TG119.MT_ETH_2A_#1.dcm  RP.TG119.MT_ETH_7F.dcm  RP.TG119.PR_ETH_2A_2.dcm  RP.TG119.PR_ETH_7F.dcm  RP.TG119.PR_UN_2A_#1.dcm  RP.TG119.PR_UN_7F.dcm  RP1.2.752.243.1.1.20230623170950828.2520.26087.dcm  RTPLAN_EL_PT_01.dcm  RTPLAN_EL_PT_03.dcm  RTPLAN_MO_PT_01.dcm  RTPLAN_MO_PT_02.dcm  RTPLAN_MO_PT_03.dcm  RTPLAN_MO_PT_04.dcm  RTPLAN_MR_PT_01_PENALTY.dcm  RTPLAN_MR_PT_02_PENALTY.dcm  RTPLAN_MR_PT_03_O&C.dcm  RTPLAN_MR_PT_05_A3i.dcm  RTPLAN_PI_PT_01.dcm  RTPLAN_PI_PT_03.dcm
python/: .gitignore  INSTALL.md  LICENSE  MANIFEST.in  PACKAGE_STATUS.md  PUBLISHING_GUIDE.md  PYPI_CHECKLIST.md  README.md  UPLOAD_INSTRUCTIONS.md  build_package.py  generate_ts_reference.py  publish_to_pypi.py  pyproject.toml  requirements.txt  verify_package.py
python/examples/: batch_analysis.py  cohort_analysis.py  custom_visualization.py  pam_analysis.py  single_plan_analysis.py
python/rtplan_complexity/: __init__.py  clustering.py  correlation.py  export.py  metrics.py  parser.py  statistics.py  types.py
python/rtplan_complexity/visualization/: __init__.py  box_plots.py  heatmap.py  scatter_matrix.py  violin.py
python/tests/: compare_ts_ucomx.py  cross_validate.py  cross_validate_pam.py  cross_validate_pam_results.json  cross_validate_ucomx.py  external_reference.py  test_metrics.py  test_pam.py  test_parser.py  test_statistics.py  ucomx_aav_union.py  ucomx_all_plans.py  ucomx_ca_test.py  ucomx_formula_test.py  ucomx_ja_check.py  ucomx_multiarc_test.py
python/tests/reference_data/: .gitkeep  benchmark_pycomplexity.json  expected_metrics.json  reference_metrics_ts.json
scripts/: generate-reference-data.ts
src/: App.tsx  index.css
src/components/: ThemeProvider.tsx
src/components/batch/: BatchDemoLoader.tsx  BatchDistributionChart.tsx  BatchExportPanel.tsx  BatchProgressBar.tsx  BatchResultsTable.tsx  BatchSummaryStats.tsx  BatchUploadZone.tsx  OutlierReport.tsx  index.ts
src/components/cohort/: BoxPlotChart.tsx  ClusterSummaryGrid.tsx  ClusteringConfig.tsx  ClusteringSuggestions.tsx  CohortDemoLoader.tsx  CohortExportPanel.tsx  CohortProgressBar.tsx  CohortUploadZone.tsx  CorrelationHeatmap.tsx  ExtendedStatsTable.tsx  MetricSelector.tsx  ScatterMatrix.tsx  ViolinPlot.tsx  index.ts
src/components/comparison/: BeamComparisonTable.tsx  CPComparisonViewer.tsx  ComparisonDeliveryChart.tsx  ComparisonDemoSelect.tsx  ComparisonHeader.tsx  ComparisonMUChart.tsx  ComparisonPolarChart.tsx  ComparisonUploadZone.tsx  MLCDifferenceViewer.tsx  MetricsDiffTable.tsx  index.ts
src/components/help/: IEC61217Diagram.tsx  PatientAxesDiagram.tsx  TableOfContents.tsx  index.ts
src/components/home/: ModeSelector.tsx  WorkflowGuide.tsx  index.ts
src/components/metrics/: MetricStatusBadge.tsx  index.ts
src/components/settings/: MachineMappingEditor.tsx  MachineMappingManager.tsx  PresetEditor.tsx  PresetManager.tsx  index.ts
src/components/ui/: exportable-chart.tsx  info-box.tsx  logo.tsx  sidebar.tsx  theme-toggle.tsx
src/components/viewer/: AngularDistributionChart.tsx  BeamSelector.tsx  BeamSummaryCard.tsx  Charts.tsx  CollimatorViewer.tsx  ComplexityHeatmap.tsx  ControlPointNavigator.tsx  DeliveryTimelineChart.tsx  DemoLoader.tsx  FileUploadZone.tsx  GantryViewer.tsx  MetricsPanel.tsx  (+6 more)
src/contexts/: BatchContext.tsx  CohortContext.tsx  MetricsConfigContext.tsx  ThresholdConfigContext.tsx
src/lib/: chart-export.ts  demo-data.ts  export-utils.ts  machine-mapping.ts  metrics-definitions.ts  outlier-detection.ts  pdf-report.ts  threshold-definitions.ts  validation-data.ts
src/pages/: BatchDashboard.tsx  CohortAnalysis.tsx  ComparePlans.tsx  Help.tsx  Index.tsx  MetricsReference.tsx  NotFound.tsx  PythonDocs.tsx  TechnicalReference.tsx  ValidationReport.tsx
src/test/: _dump-beam.test.ts  beam-energy.test.ts  clustering.test.ts  correlation.test.ts  dicom-metrics.test.ts  dicom-parser.test.ts  em-pi-cross-validation.test.ts  export-metrics-json.test.ts  extended-statistics.test.ts  metric-utils.test.ts  test-utils.ts
(+16 files in other folders)
