[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtplan-complexity"
version = "1.0.0"
description = "RTplan Complexity Lens (RTp-lens) - Python Toolkit for DICOM RT Plan analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "RT Complexity Lens Team"}
]
keywords = [
    "DICOM",
    "RT Plan",
    "radiotherapy",
    "complexity",
    "VMAT",
    "IMRT",
    "UCoMX",
    "medical physics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "pydicom>=2.4.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
all = [
    "rtplan-complexity[viz,dev]",
]

[project.urls]
Homepage = "https://rt-complexity-lens.lovable.app"
Documentation = "https://rt-complexity-lens.lovable.app/help"
Repository = "https://github.com/rtplan-complexity/rtplan-complexity"

[project.scripts]
rtplan-analyze = "rtplan_complexity.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rtplan_complexity*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
